Convert to object mapping